--- a/site/public/login.html
+++ b/site/public/login.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Example Health</title>
+  <title>DEMO Health</title>
   <meta name="description" content="Example Health Site">
   <meta name="Anton McConville" content="Example Health">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
@@ -18,8 +18,8 @@
 
     <div class="pillar">
       <div class="loginlogo"><img class="Fictionallogo" src="images/fictional.svg"></div>
-      <div class="Fictionalname">Example Health</div>
-      <div class="disclaimer">Example Heatlh is a simulated health data and software demonstration. <b>All data within the system is simulated</b>. Any resemblance to a real person is entirely coincidental.</div>
+      <div class="Fictionalname">DEMO Health</div>
+      <div class="disclaimer">DEMO Heatlh is a simulated health data and software demonstration. <b>All data within the system is simulated</b>. Any resemblance to a real person is entirely coincidental.</div>
       <div class="loginform">
         <form method="post" action="index.html">
           <div class="box">
